// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`zoom > getZoomLevels 1`] = `
[
  [
    "auto",
    "zoom.auto",
  ],
  [
    0.5,
    "50%",
  ],
  [
    0.75,
    "75%",
  ],
  [
    1,
    "100%",
  ],
  [
    1.25,
    "125%",
  ],
  [
    1.5,
    "150%",
  ],
  [
    2,
    "200%",
  ],
]
`;

exports[`zoom > getZoomLevels 2`] = `
[
  [
    0.5,
    "50%",
  ],
  [
    0.75,
    "75%",
  ],
  [
    1,
    "100%",
  ],
  [
    1.25,
    "125%",
  ],
  [
    1.5,
    "150%",
  ],
  [
    2,
    "200%",
  ],
]
`;

exports[`zoom > getZoomLevels 3`] = `
[
  [
    "thumbnail",
    "zoom.thumbnail",
  ],
  [
    "small",
    "zoom.small",
  ],
  [
    "normal",
    "zoom.normal",
  ],
  [
    "large",
    "zoom.large",
  ],
]
`;

exports[`zoom > getZoomLevels 4`] = `[]`;

exports[`zoom > getZoomLevels 5`] = `
[
  [
    "auto",
    "zoom.auto",
  ],
  [
    0.5,
    "50%",
  ],
  [
    0.75,
    "75%",
  ],
  [
    1,
    "100%",
  ],
  [
    1.25,
    "125%",
  ],
  [
    1.5,
    "150%",
  ],
  [
    2,
    "200%",
  ],
]
`;

exports[`zoom > getZoomLevels 6`] = `
[
  [
    "auto",
    "zoom.auto",
  ],
  [
    0.5,
    "50%",
  ],
  [
    0.75,
    "75%",
  ],
  [
    1,
    "100%",
  ],
  [
    1.25,
    "125%",
  ],
  [
    1.5,
    "150%",
  ],
  [
    2,
    "200%",
  ],
]
`;
